[workspace]
members = [
    "overload",
    "response-assert",
    "cluster-executor",
    "overload-http",
    "datagen",
    "overload-metrics",
    "lua-helper",
    "tests",
    "common-types",
    "common-env"
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.70"
authors = ["Md Sarowar Alam <sarowar.cse@gmail.com>"]
license = "MIT"

[workspace.dependencies.tokio]
version = "1.37.0"
default-features = false
features = ["rt-multi-thread", "macros"]

[workspace.dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0"

[workspace.dependencies.env_logger]
version = "0.11"

[workspace.dependencies.anyhow]
version = "1.0"

[profile.release]
debug = true
