[workspace]
members = [
    "overload",
    "response-assert",
    "cluster-executor",
    "overload-http",
    "datagen",
    "overload-metrics",
    "lua-helper",
    "tests",
    "common-types",
    "common-env"
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.96"
authors = ["Md Sarowar Alam <sarowar.cse@gmail.com>"]
license = "MIT"

[workspace.dependencies.tokio]
version = "1.52"
default-features = false
features = ["rt-multi-thread", "macros"]

[workspace.dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0"

[workspace.dependencies.env_logger]
version = "0.11"

[workspace.dependencies.anyhow]
version = "1.0"

[workspace.dependencies.mlua]
version = "0.11"
features = ["lua53", "send", "serialize"]

[workspace.dependencies.url]
version = "2.3"

[workspace.dependencies.sqlx]
version = "0.8"
default-features = false
features = ["sqlite", "runtime-tokio-native-tls"]

[workspace.dependencies.hyper]
version = "0.14"

[workspace.dependencies.http]
version = "0.2"

[profile.release]
debug = true
