[package]
name = "cluster-executor"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.overload-http]
path = "../overload-http"

[dependencies.response-assert]
path = "../response-assert"

[dependencies.datagen]
path = "../datagen"

[dependencies.overload-metrics]
path = "../overload-metrics"

[dependencies.lua-helper]
path = "../lua-helper"

[dependencies.common-types]
path = "../common-types"

[dependencies.common-env]
path = "../common-env"

[dependencies.rust-cloud-discovery]
version = "0.2"

[dependencies.cluster-mode]
version = "0.3"

[dependencies.remoc]
version = "0.10"

[dependencies.tokio]
workspace = true
features = ["net"]

[dependencies.tokio-util]
version = "0.7"
features = ["io", "compat"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.http]
workspace = true

[dependencies.log]
version = "0.4"

[dependencies.anyhow]
version = "1.0"

[dependencies.futures-core]
version = "0.3"

[dependencies.futures-util]
version = "0.3"

[dependencies.fastrand]
version = "2.4"

[dependencies.sqlx]
workspace = true

[dependencies.tokio-stream]
version = "0.1"

[dependencies.hyper]
workspace = true

[dependencies.tower]
version = "0.4"

[dependencies.futures]
version = "0.3"

[dependencies.regex]
version = "1.6"

[dependencies.lazy_static]
version = "1.4"

[dependencies.once_cell]
version = "1.16"

[dependencies.uuid]
version = "1.2"
features = ["v4"]

[dependencies.mlua]
workspace = true

[dependencies.url]
workspace = true

[dev-dependencies.tracing-subscriber]
version = "0.3"
features = ["fmt", "env-filter"]

[dev-dependencies.httpmock]
version = "0.6"

[dev-dependencies.more-asserts]
version = "0.3"

[dev-dependencies.rand]
version = "0.10"

[dev-dependencies.base64]
version = "0.22"

[dev-dependencies.env_logger]
workspace = true

[features]
cluster = []
