[package]
name = "datagen"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.regex]
version = "1.4"

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.fastrand]
version = "2.1"

[dependencies.fastrand-contrib]
version = "0.1"

[dependencies.rand]
version = "0.8"

[dependencies.regex-syntax]
version = "0.6"

[dependencies.regex_generate]
version = "0.2"

[dependencies.anyhow]
version = "1.0"


[dependencies.log]
version = "0.4"

[dependencies.lazy_static]
version = "1.4"

[dependencies.rhai]
version = "1.18"
default-features = false
features = ["serde"]

[dev-dependencies.assert-json-diff]
version = "2.0"

[dev-dependencies.env_logger]
workspace = true

[dev-dependencies.jsonpath_lib]
version = "0.3"