[package]
name = "lua-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mlua]
version = "0.8"
features = ["lua53", "send"]

[dependencies.serde_json]
version = "1.0"

[dependencies.log]
version = "0.4"

[dev-dependencies.env_logger]
version = "0.10"