[package]
name = "lua-helper"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mlua]
workspace = true

[dependencies.log]
version = "0.4"

[dev-dependencies.env_logger]
version = "0.11"

[dev-dependencies.serde_json]
workspace = true