[package]
name = "overload-metrics"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.smallvec]
version = "1.7"

[dependencies.tokio]
workspace = true
features = ["sync"]

[dependencies.prometheus]
version = "=0.13.2"
features = ["process"]

[dependencies.log]
version = "0.4"

[dependencies.lazy_static]
version = "1.4"

[dev-dependencies.tokio]
workspace = true
features = ["rt-multi-thread", "macros"]
