[package]
name = "overload"
version = "0.9.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/eipi1/overload"
description = """
A distributed load testing application
"""
categories = ["development-tools"]
keywords = ["load-testing", "cluster"]

[lib]
name = "overload"
path = "src/overload/lib.rs"

[dependencies.lua-helper]
path = "../lua-helper"

[dependencies.overload-metrics]
path = "../overload-metrics"

[dependencies.overload-http]
path = "../overload-http"

[dependencies.cluster-executor]
path = "../cluster-executor"

[dependencies.datagen]
path = "../datagen"

[dependencies.rust-cloud-discovery]
version = "0.2"
optional = true

[dependencies.cloud-discovery-kubernetes]
version = "0.2"
optional = true

[dependencies.cluster-mode]
version = "0.3"
optional = true

[dependencies.bytes]
version = "1.4"

[dependencies.lazy_static]
version = "1.4"

[dependencies.futures]
version = "0.3"

[dependencies.futures-core]
version = "0.3"

[dependencies.futures-util]
version = "0.3"

[dependencies.tokio]
workspace = true
features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "parking_lot"]

[dependencies.tokio-stream]
version = "0.1"

[dependencies.tokio-util]
version = "0.7"
features = ["io", "compat"]

[dependencies.http]
workspace = true

[dependencies.url]
workspace = true

[dependencies.hyper]
workspace = true
features = ["runtime", "http1", "http2", "client", "stream"]

[dependencies.warp]
version = "0.3"

[dependencies.async-trait]
version = "0.1"

[dependencies.csv-async]
version = "1.2"
features = ["tokio"]

[dependencies.sqlx]
workspace = true

[dependencies.regex]
version = "1.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.uuid]
version = "1.1"
features = ["v4"]

[dependencies.anyhow]
version = "1.0"

[dependencies.prometheus]
version = "=0.13.2"
features = ["process"]

[dependencies.log]
version = "0.4"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.2"

[dependencies.async-compression]
version = "0.4"
features = ["gzip", "tokio"]

[dev-dependencies.tokio]
workspace = true
features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "test-util"]

[dev-dependencies.more-asserts]
version = "0.3"

[dev-dependencies.httpmock]
version = "0.6"

[dev-dependencies.sha2]
version = "0.10"

[dev-dependencies.portpicker]
version = "0.1"

[dev-dependencies.test-case]
version = "2.2"

[features]
cluster = ["rust-cloud-discovery", "cloud-discovery-kubernetes", "cluster-mode"]
