[package]
name = "tests"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies.rstest]
version = "0.16"

[dev-dependencies.serde_json]
version = "1.0"

[dev-dependencies.reqwest]
version = "0.11"
features = ["json", "stream"]

[dev-dependencies.tokio]
workspace = true
features = ["macros", "fs", "sync", "parking_lot"]

[dev-dependencies.tokio-util]
version = "0.7"

[dev-dependencies.log]
version = "0.4"

[dev-dependencies.env_logger]
version = "0.10"

[dev-dependencies.futures]
version = "0.3"

[dev-dependencies.httpmock]
version = "0.6"

[dev-dependencies.url]
version = "2.3"

[features]
cluster = []